refact : 방 목록 조회 repository 공통 함수 묶음